This file documents the revision history for Perl extension Mojolicious.

2.71  2012-03-31
  - Improved documentation.
  - Improved tests.

2.70  2012-03-30
  - Improved speed of version command by switching to the MetaCPAN API.
  - Improved all bundled TLS test certificates to expire at the same time.
  - Improved documentation.
  - Improved tests.
  - Fixed handler detection precedence bug in Mojolicious::Renderer.
  - Fixed ability to disable inactivity timeout in Hypnotoad.
  - Fixed ability to disable accepts limit in Hypnotoad.
  - Fixed small bug in Mojo::Command->get_all_data.
  - Fixed small bug in inflate command. (memowe)

2.69  2012-03-26
  - Removed X-Forwarded-Host support since it is redundant for well
    configured reverse proxies.
  - Changed number of redirects ojo and the get command will follow to 10.
  - Improved ojo to detect proxy servers automatically.
  - Improved Mojo::DOM::CSS performance.
  - Improved documentation.
  - Improved Mojo::Reactor tests to be less strict.
  - Fixed a bug where paths and classes in Mojolicious::Static and
    Mojolicious::Renderer would have the wrong precedence.
  - Fixed small bug where Hypnotoad would ignore the MOJO_REVERSE_PROXY
    environment variable.

2.68  2012-03-24
  - Improved documentation.
  - Fixed generate command.

2.67  2012-03-24
  - Added start_app method to Mojo::Command.
  - Improved documentation.
  - Improved tests.
  - Fixed small bugs in Mojo::Command and Mojolicious::Commands.

2.66  2012-03-23
  - Reformatted "Changes".
  - Improved Mojo::Reactor::Poll performance.
  - Improved tests.
  - Fixed one_tick semantics to be equal in Mojo::Reactor::Poll and
    Mojo::Reactor::EV.

2.65  2012-03-22
  - Deprecated Mojo::IOLoop->drop in favor of Mojo::IOLoop->remove.
  - Renamed Mojo::Reactor->drop to Mojo::Reactor->remove.
  - Added Mojo::Reactor::Poll.
  - Added one_tick method to Mojo::Reactor and Mojo::Reactor::EV.
  - Removed experimental status from Mojo::IOLoop::Client.