@@ -1,6 +1,7 @@
 This file documents the revision history for Perl extension Mojolicious.
 
 2.71  2012-03-31
+  - Improved Hypnotoad error handling.
   - Improved documentation.
   - Improved tests.
 
